# logos-chat-rs

./: .gitignore  Cargo.toml  build.rs
chat/: Cargo.toml  build.rs
chat/src/: client.rs  ds.rs  lib.rs  main.rs
chat/src/waku/: sys.rs
