[package]
name = "chat-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "chat_rs"
path = "src/lib.rs"

[[bin]]
name = "dev"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1.89"
base64 = "0.22"
chrono = "0.4.42"
mpsc = "0.2.6"
serde_json = "1"
tokio = { version = "1.48.0", features = ["full", "tokio-macros"] }
tracing = "0.1"
libchat = {git = "https://github.com/logos-messaging/libchat.git", branch = "expose_rust_api"}
